# anvilos_alpha

./: .TODO.md.swp  .gitattributes  .gitignore  .notes_human.md.swp  12  ANVIL_INFO.md  Dockerfile.gentoo.template  GEMINI.md  PHASE2_DIRECTIVES.md  PHASE4_MANIFEST.py  ROADMAP.md  TODO.md  actual_files.txt  aimeat.py  aimeat.py.bak  architect_daemon.py  build_phase4.anv  build_phase4.py  build_phase4.py.legacy  build_phase4_anvil.py  card_stack.py  cli.py  configure_kernel.anv  configure_toolchain.anv  debug_daemon.py  debug_import.py  firecracker  forge.py  forge_directives.py  forge_phase4.mpy  forge_phase4.py  gemini.md  git_manual.sh  grub.cfg  hello_sovereign.mpy  hello_sovereign.py  inject_phase2.py  kernel.h.template  matrix.py  notes_human.md  (+18 more)
DOCS/: ANVIL_CODING_GUIDE.md  MAINFRAME_MANUAL.md  MANIFEST_MINIMAL.md  anvil_coding_manual.md
archive/: ANVIL_INFO.md  GEMINI.md  aimeat@192.168.6.99  hello_mainframe.txt  hello_result.txt  init.anv  init.c  kernel.h  passwd.c  readme.md  requirements.backend.txt  stage3.tar.xz.DIGESTS.asc
build_artifacts/: busybox_config  synapse.anv
busybox/: .config
config/: container_crontab  key.pem  token
data/: aimeat_memory.txt  card_archive.json  card_archive_jammed.json  (+1 more)
oss_sovereignty/sources/util-linux-2.39.3/libblkid/docs/: Makefile  Makefile.am  Makefile.in
oss_sovereignty/sources/util-linux-2.39.3/libfdisk/docs/: Makefile  Makefile.am  Makefile.in
oss_sovereignty/sources/util-linux-2.39.3/libmount/docs/: Makefile  Makefile.am  Makefile.in
oss_sovereignty/sources/util-linux-2.39.3/libsmartcols/docs/: Makefile  Makefile.am  Makefile.in
oss_sovereignty/sources/zfs-2.2.2/contrib/pyzfs/: Makefile.am  setup.py.in
oss_sovereignty/sources/zfs-2.2.2/contrib/pyzfs/libzfs_core/: _constants.py  _error_translation.py  _libzfs_core.py  _nvlist.py  ctypes.py  exceptions.py
oss_sovereignty/sources/zfs-2.2.2/contrib/pyzfs/libzfs_core/bindings/: __init__.py  libnvpair.py  libzfs_core.py
oss_sovereignty/sources/zfs-2.2.2/contrib/pyzfs/libzfs_core/test/: test_libzfs_core.py  test_nvlist.py
oss_sovereignty/sources/zfs-2.2.2/lib/: Makefile.am
oss_sovereignty/sources/zfs-2.2.2/lib/libefi/: libefi_la-rdwr_efi.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libnvpair/: Makefile.am
oss_sovereignty/sources/zfs-2.2.2/lib/libnvpair/.deps/: libnvpair_la-libnvpair.Plo  libnvpair_la-libnvpair_json.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libshare/: libshare_impl.h  nfs.h  smb.h
oss_sovereignty/sources/zfs-2.2.2/lib/libshare/os/linux/: libshare_la-nfs.lo  libshare_la-smb.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libshare/os/linux/.deps/: libshare_la-smb.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/: libspl_assert_la-assert.lo  libspl_impl.h  libspl_la-atomic.lo  libspl_la-list.lo  libspl_la-mkdirp.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/.deps/: libspl_la-atomic.Plo  libspl_la-list.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/: assert.h  atomic.h  libgen.h  libshare.h  statcommon.h  stdlib.h  string.h  umem.h  unistd.h  zone.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/os/freebsd/: fcntl.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/os/freebsd/sys/: byteorder.h  fcntl.h  file.h  mnttab.h  mount.h  param.h  stat.h  vfs.h  zfs_context_os.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/os/freebsd/sys/ia32/: asm_linkage.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/os/linux/sys/: byteorder.h  errno.h  mnttab.h  mount.h  param.h  stat.h  sysmacros.h  zfs_context_os.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/os/linux/sys/ia32/: asm_linkage.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/rpc/: xdr.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/sys/: acl.h  acl_impl.h  asm_linkage.h  callb.h  cmn_err.h  cred.h  debug.h  dkio.h  dklabel.h  feature_tests.h  inttypes.h  isa_defs.h  kmem.h  kstat.h  list_impl.h  mhd.h  mkdev.h  policy.h  poll.h  priv.h  processor.h  simd.h  stack.h  stdtypes.h  sunddi.h  systeminfo.h  time.h  trace_spl.h  trace_zfs.h  types.h  types32.h  uio.h  vnode.h  wmsum.h  zone.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/include/sys/dktp/: fdisk.h
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/os/linux/: libspl_la-getexecname.lo  libspl_la-gethostid.lo  libspl_la-zone.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libspl/os/linux/.deps/: libspl_la-gethostid.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libtpool/: Makefile.am  libtpool_la-thread_pool.lo  thread_pool_impl.h
oss_sovereignty/sources/zfs-2.2.2/lib/libtpool/.deps/: libtpool_la-thread_pool.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libuutil/: libuutil_la-uu_avl.lo  libuutil_la-uu_list.lo  libuutil_la-uu_misc.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libuutil/.deps/: libuutil_la-uu_avl.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libzfs/: libzfs_impl.h  libzfs_la-libzfs_dataset.lo  libzfs_la-libzfs_iter.lo  libzfs_la-libzfs_mount.lo  libzfs_la-libzfs_pool.lo  libzfs_la-libzfs_util.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libzfs/.deps/: libzfs_la-libzfs_crypto.Plo  libzfs_la-libzfs_import.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libzfs/os/linux/: libzfs_la-libzfs_mount_os.lo  libzfs_la-libzfs_pool_os.lo  libzfs_la-libzfs_util_os.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libzfs/os/linux/.deps/: libzfs_la-libzfs_mount_os.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libzfs_core/os/linux/: libzfs_core_la-libzfs_core_ioctl.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libzfsbootenv/: libzfsbootenv_la-lzbe_device.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libzfsbootenv/.deps/: libzfsbootenv_la-lzbe_pair.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libzpool/: libzpool_la-kernel.lo
oss_sovereignty/sources/zfs-2.2.2/lib/libzstd/: Makefile.am
oss_sovereignty/sources/zfs-2.2.2/lib/libzutil/: libzutil_la-zutil_pool.lo  zutil_import.h
oss_sovereignty/sources/zfs-2.2.2/lib/libzutil/.deps/: libzutil_la-zutil_import.Plo
oss_sovereignty/sources/zfs-2.2.2/lib/libzutil/os/linux/.deps/: libzutil_la-zutil_setproctitle.Plo
(+167220 files in other folders)
