


AUTOMAKE_OPTIONS = 1.10







DOC_MODULE=libfdisk





DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.xml





DOC_SOURCE_DIR=../src


SCANGOBJ_OPTIONS=



SCAN_OPTIONS=



MKDB_OPTIONS=--sgml-mode --output-format=xml --name-space fdisk



MKTMPL_OPTIONS=


MKHTML_OPTIONS=



FIXXREF_OPTIONS=




HFILE_GLOB=$(top_builddir)/libfdisk/src/libfdisk.h
CFILE_GLOB=$(top_srcdir)/libfdisk/src/*.c



EXTRA_HFILES=



IGNORE_HFILES=fdiskP.h



HTML_IMAGES=



content_files = $(builddir)/version.xml




expand_content_files=






GTKDOC_CFLAGS=
GTKDOC_LIBS=


include $(top_srcdir)/config/gtk-doc.make



EXTRA_DIST += version.xml.in




DISTCLEANFILES += version.xml
