


AUTOMAKE_OPTIONS = 1.10







DOC_MODULE=libmount





DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.xml





DOC_SOURCE_DIR=../src


SCANGOBJ_OPTIONS=



SCAN_OPTIONS=



MKDB_OPTIONS=--sgml-mode --output-format=xml --name-space mnt



MKTMPL_OPTIONS=


MKHTML_OPTIONS=



FIXXREF_OPTIONS=




HFILE_GLOB=$(top_builddir)/libmount/src/libmount.h
CFILE_GLOB=$(top_srcdir)/libmount/src/*.c



EXTRA_HFILES=



IGNORE_HFILES=mountP.h



HTML_IMAGES=



content_files = $(builddir)/version.xml




expand_content_files=






GTKDOC_CFLAGS=
GTKDOC_LIBS=


include $(top_srcdir)/config/gtk-doc.make



EXTRA_DIST += version.xml.in




DISTCLEANFILES += version.xml
